maybe a fix for align issue

--- a/elizawebsite/src/App.css
+++ b/elizawebsite/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
-  /* padding: 2rem; */
+  /* padding: 2rem; 
   
-}
+} */
 
 .headers{
   font-family: 'Helvetica';
@@ -21,7 +21,7 @@
   background-color:white;
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 .contactbox{
@@ -35,6 +35,7 @@
   flex-direction: row;
   margin-left: 5rem;
   padding-top: 1rem;
+  /* margin: 0; */
 }
 
 .title{
