--- a/elizawebsite/src/index.css
+++ b/elizawebsite/src/index.css
@@ -16,7 +16,6 @@
 a {
   font-weight: 500;
   color: #facc15;
-  
   text-decoration: inherit;
 }
 a:hover {
@@ -27,9 +26,9 @@ body {
   margin: 0;
  /* display: flex;*/
   /*place-items: center;*/
-  min-width: 320px;
-  min-height: 100vh;
-}
+  /* min-width: 320px;
+  min-height: 100vh;*/
+} 
 
 h1 {
   font-size: 3.2em;
